--- a/3D/dml-ide.html
+++ b/3D/dml-ide.html
@@ -19,31 +19,31 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
 
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="./">3D</a>
-				</li>
-				<li>
-					<a href="../ui-ux/">UI/UX</a>
-				</li>
-                <li>
-					<a href="../product/">PRODUCT</a>
-				</li>
-				<li>
-					<a href="../arch/">ARCH</a>
-				</li>
-
-			</ul>
-
-        </div>
+ <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="./">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../ui-ux/">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../arch/">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../product/">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 
   <div id="3D" class = "panel">
@@ -54,11 +54,11 @@
       <!-- DMLIDE -->
       <div class="spacer"></div>
       <div class="row standard-margin project-showcase">
-        <div class="col-6 title">
+        <div class="col-md-6 col-sm-12 title">
           DML-IDE
         </div>
-        <div class="col-6">
-          <h3>Professor Hod Lipson, Sofia Wyetzner</h3> <h4>Creative Machines Lab, Columbia University</h4>
+        <div class="col-md-6 col-sm-12">
+          <h4>Professor Hod Lipson, Sofia Wyetzner</h4> <h4>Creative Machines Lab, Columbia University</h4>
           <h4>June - December 2019</h4>
         </div>
       </div>
@@ -70,7 +70,7 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
           <p>I was assigned to test and debug a program being developed by the Creative Machines Lab at Columbia University,
             the Design Model Language interactive development environment.</p>
           <p>My role as an undergraduate researcher was to test the program by creating different structures to simulate and
@@ -80,13 +80,13 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
          <img src="./media/dml-2.gif" class="image-showcase mx-auto" alt="Torsional beam optimization.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
          The program, developed in C++, is used to render 3D structures as mass-spring objects and simulate forces on it.
           The program then optimizes the mass of the structure by removing springs under the least amount of stress.
           The program halts when the object reaches a certain deflection rate or percentage of original mass remaining.
@@ -94,7 +94,7 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
         The Interactive Development Environment was used to simulate any imported volume under a specified force.
           This volume was the result of a cantilever beam subject to a torsional force on one end.
           The result is a hollowed rectangular prism of springs with a spiraling effect.
@@ -104,17 +104,17 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
           <div class="Sirv" data-src="https://capprous.sirv.com/Screen%20Recording%202020-03-23%20at%2012.34.54%20PM/Screen%20Recording%202020-03-23%20at%2012.34.54%20PM.spin"></div>
           <script src="https://scripts.sirv.com/sirv.js"></script>
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
          <img src="./media/dml-4.png" class="image-showcase mx-auto" alt="Nvidia Visual profiler example.">
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <p>
           Because the program was very computation heavy when importing large objects that would turn into hundreds of thousands of mass-spring
           objects, we wanted to benchmark the program in different configurations to find the fastest configuration of
@@ -136,10 +136,10 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
          <img src="./media/dml-6.png" class="image-showcase mx-auto" alt="Bracket before optimization.">
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
          <img src="./media/dml-5.gif" class="image-showcase mx-auto" alt="Bracket after optimization.">
         </div>
       </div>
@@ -159,4 +159,14 @@
 
 
 
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
   </body>
+</html>
