--- a/3D/solAR.html
+++ b/3D/solAR.html
@@ -19,31 +19,30 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
 
   </head>
-  <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="./">3D</a>
-				</li>
-				<li>
-					<a href="../ui-ux/">UI/UX</a>
-				</li>
-                <li>
-					<a href="../product/">PRODUCT</a>
-				</li>
-				<li>
-					<a href="../arch/">ARCH</a>
-				</li>
-
-			</ul>
-
-        </div>
+ <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="./">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../ui-ux/">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../arch/">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../product/">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 
   <div id="3D" class = "panel">
@@ -55,17 +54,17 @@
       <!-- GRAPHICS -->
       <div class="spacer"></div>
       <div class="row standard-margin project-showcase">
-        <div class="col-6 title">
+        <div class="col-md-6 col-sm-12 title">
           solAR
         </div>
-        <div class="col-6">
-          <h2>Professor Steven Feiner, Columbia University</h2>
+        <div class="col-md-6 col-sm-12">
+          <h4>Professor Steven Feiner, Columbia University</h4>
           <h4>Spring 2021</h4>
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           This was a project assignment that was intended as practice for coding in AR. The AR library Vuforia was used in conjunction with Unity.
           Target images were used for placement of the solar system as well as wand usage that allowed selection and mani
           pulation. The final product was a Unity developed game that allowed the user to create a solar system in AR by altering
@@ -76,34 +75,37 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
          <img src="./media/solAR-1.png" class="image-showcase mx-auto" alt="Solar system on image target.">
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/solAR-2.png" class="image-showcase mx-auto" alt="Editing orbital using second image target.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
          <img src="./media/solAR-4.png" class="image-showcase mx-auto" alt="Adding orbitals using image target.">
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/solAR-5.png" class="image-showcase mx-auto" alt="Selection using third image target.">
         </div>
       </div>
 
 
-
-      <!-- END GRAPHICS SECTION-->
-
   </div>
   </div>
 
 
 
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-
-
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
   </body>
+</html>
