--- a/3D/vrt-therapy.html
+++ b/3D/vrt-therapy.html
@@ -19,31 +19,31 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
 
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="./">3D</a>
-				</li>
-				<li>
-					<a href="../ui-ux/">UI/UX</a>
-				</li>
-                <li>
-					<a href="../product/">PRODUCT</a>
-				</li>
-				<li>
-					<a href="../arch/">ARCH</a>
-				</li>
-
-			</ul>
-
-        </div>
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="./">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../ui-ux/">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../arch/">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../product/">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 
   <div id="3D" class = "panel">
@@ -56,23 +56,23 @@
       <!-- VRT THERAPY -->
       <div class="spacer"></div>
       <div class="row standard-margin project-showcase">
-        <div class="col-6 title">
+        <div class="col-md-6 col-sm-12 title">
           VRt Therapy
         </div>
-        <div class="col-6">
-          <h2>Team: Vani Jain, Nadia Jurkovich, Dana AlShehri</h2>
-          <h2>March 2021</h2>
+        <div class="col-md-6 col-sm-12">
+          <h4>Team: Vani Jain, Nadia Jurkovich, Dana AlShehri</h4>
+          <h4>March 2021</h4>
         </div>
       </div>
 
-      <div class="row standard-margin project-showcase"><div class="col-md-12 d-flex justify-content-center"><iframe width="560" height="315" src="https://www.youtube.com/embed/IFR1D2-oVvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+      <div class="row standard-margin project-showcase"><div class="col-md-12 col-sm-12 d-flex justify-content-center"><iframe width="560" height="315" src="https://www.youtube.com/embed/IFR1D2-oVvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
           <img src="./media/vrt-1.gif" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
         </div>
-        <div class="col">
+        <div class="col-md-6 col-sm-12">
           This project was created with the goal of successfully implementing key principles of VR application design.
           The project needed to include elegant wayfinding, travel, selection and manipulation techniques in VR.
           The VR platform used was the Oculus Quest 2 and the application was developed from scratch using Unity and C#.
@@ -80,19 +80,19 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
          <img src="./media/vrt-2.gif" class="image-showcase mx-auto" alt="Travel example.">
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/vrt-3.jpg" class="image-showcase mx-auto" alt="Art Therapy Game map.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
          <img src="./media/vrt-4.gif" class="image-showcase mx-auto" alt="Art Therapy Game environment painting.">
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/vrt-5.gif" class="image-showcase mx-auto" alt="Art Therapy Game environment manipulation.">
         </div>
       </div>
@@ -107,5 +107,14 @@
 
 
 
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
   </body>
 </html>
