--- a/arch/floodplain.html
+++ b/arch/floodplain.html
@@ -19,31 +19,30 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
-
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="../3D/">3D</a>
-				</li>
-				<li>
-					<a href="../ui-ux/">UI/UX</a>
-				</li>
-                <li>
-					<a href="../product/">PRODUCT</a>
-				</li>
-				<li>
-					<a href="./">ARCH</a>
-				</li>
-
-			</ul>
-
-        </div>
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../3D/">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../ui-ux/">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../product/">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 
     <div id="ARCH" class = "panel">
@@ -53,46 +52,46 @@
       <!-- TITLE -->
       <div class="spacer"></div>
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
           <div class="title">
           Floodplain
           </div>
-          <h2>March 2019</h2>
+          <h3>March 2019</h3>
           <div>The East Harlem area of Manhattan contains many different interesting characteristics, one of which is
             the land that once was the Harlem Marsh. This land is now developed, but still contains the largest at risk
             floodplain in Manhattan. Sea levels are constantly rising; how can we understand how the city will be
             affected by a potential flood?
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/flood-1.JPG" class="image-showcase mx-auto" alt="Flood plain from NYC hazard mapper.">
       </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
           <img src="./media/flood-3.JPG" class="image-showcase mx-auto" alt="Floodplain flow exploration 1.">
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/flood-5.JPG" class="image-showcase mx-auto" alt="Floodplain flow exploration 2.">
         </div>
       </div>
 
         <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           In a city with a dense grid of buildings, fluid dynamics and flow languages were explored in order to
           understand the action and movement of water from the Hudson in the event of a flood.
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
           <img src="./media/flood-2.png" class="image-showcase mx-auto" alt="Floodplain final model exploration.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
           <img src="./media/flood-4.png" class="image-showcase mx-auto" alt="Floodplain final model exploration.">
         </div>
       </div>
@@ -107,4 +106,14 @@
 
 
 
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
   </body>
+</html>
