--- a/product/barhubs.html
+++ b/product/barhubs.html
@@ -19,31 +19,32 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
 
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="../3D/">3D</a>
-				</li>
-				<li>
-					<a href="../ui-ux/">UI/UX</a>
-				</li>
-                <li>
-					<a href="./">PRODUCT</a>
-				</li>
-				<li>
-					<a href="../arch/">ARCH</a>
-				</li>
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../3D/">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../ui-ux/">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../arch/">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-			</ul>
-
-        </div>
 
     <div id="PRODUCT" class = "panel">
     <div class="container">
@@ -53,29 +54,34 @@
       <div class="spacer"></div>
       <!--BARHUB-->
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-12 col-sm-12">
+            <img src="./media/barhub-1.png" class="image-showcase mx-auto" alt="Barhub logo">
+        </div>
+
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-md-12 col-sm-12">
           <div class="title">BarHub</div>
-          <h2>Professor Harry West</h2>
+          <h3>Professor Harry West</h3>
           <h4>Team Members: Shawn Amirthan, Meghna Mehta, Sebastian Sanchez</h4>
           <h4>Fall 2020</h4>
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-12 col-sm-12">
          The design challenge assigned for the semester was a challenge to “design for density” in a world that is
           currently suffering from a pandemic. Our team’s territory was city nightlife, we were challenged to create
           some sort of intervention that completed some goal within this territory. We found through research that
           there is an opportunity to provide the necessary safety measures to optimize customer experience and revenue
           streams at nightlife establishments.
         </div>
-        <div class="col-6">
-          <img src="./media/barhub-1.png" class="image-showcase mx-auto" alt="Barhub logo">
-        </div>
+
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           Research showed us that as the COVID-19 pandemic causes a more regulated nightlife experience, bar owners
           were struggling to pay their employees and make rent. Attendance at bars and nightlife venues was declining
           and constrained. We discovered through interviews that the social landscape of bars has changed completely,
@@ -84,20 +90,20 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           <img src="./media/barhub-2.png" class="image-showcase mx-auto" alt="Territory research">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           <img src="./media/barhub-3.jpg" class="image-showcase mx-auto" alt="Customer research">
         </div>
       </div>
 
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           We reframed the idea with research and customer interviews in mind. We were able to create and reinforce an
           outdoor solution by implementing a space that brought multiple bars from a local area to New York City open streets.
           The idea was that an outdoor COVID-19 safe environment that attracted customers with a multi-bar experience would
@@ -107,19 +113,19 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           <img src="./media/barhub-4.gif" class="image-showcase mx-auto" alt="Barhub video showcase">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           <img src="./media/barhub-5.gif" class="image-showcase mx-auto" alt="Barhub video showcase.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
          The solution showed BarHub is able to provide consistent experience that is exciting each visit, due to its
           changing bar variety and vibrant, safe  atmosphere. This experience was built with bar owners and staff in
           mind, in order to allow them to both advertise and sell their drinks at a satellite location.
@@ -128,3 +134,17 @@
 
   </div>
   </div>
+
+
+
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
+  </body>
+</html>
