--- a/product/d-at-c.html
+++ b/product/d-at-c.html
@@ -19,31 +19,31 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
 
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="../3D/">3D</a>
-				</li>
-				<li>
-					<a href="../ui-ux/">UI/UX</a>
-				</li>
-                <li>
-					<a href="./">PRODUCT</a>
-				</li>
-				<li>
-					<a href="../arch/">ARCH</a>
-				</li>
-
-			</ul>
-
-        </div>
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../3D/">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../ui-ux/">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../arch/">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
     <div id="PRODUCT" class = "panel">
     <div class="container">
@@ -51,10 +51,10 @@
       <!-- TITLE -->
       <div class="spacer"></div>
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/datc-1.png" class="image-showcase mx-auto" alt="Re-vamped design at columbia logo.">
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <div class="title">Design @ Columbia</div>
           <h4>Spring 2021 - Current</h4>
          As a core team member of Design @ Columbia, I was able to aid the student-run organization's goal of fostering
@@ -66,19 +66,19 @@
 
 
       <div class="row standard-margin project-showcase">
-        <div class="col-4">
+        <div class="col-md-4 col-sm-12 pb-3">
           <img src="./media/datc-2.png" class="image-showcase mx-auto" alt="Marketing post example.">
         </div>
-        <div class="col-4">
+        <div class="col-md-4 col-sm-12 pb-3">
           <img src="./media/datc-5.png" class="image-showcase mx-auto" alt="Marketing post example for social media.">
         </div>
-        <div class="col-4">
+        <div class="col-md-4 col-sm-12 pb-3">
           <img src="./media/datc-3.png" class="image-showcase mx-auto" alt="Panel marketing post example.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
          My role involved strategizing our organization's re-branding. This involved developing a new visual language
           for the organization. Working with the Marketing Coordinator Wendy Sung and Design Lead Laura Block, we
           drafted different languages and styles, using various iteration strategies.
@@ -86,16 +86,28 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
          <img src="./media/datc-7.png" class="image-showcase mx-auto" alt="Design at columbia re-branding reference board.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
          <img src="./media/datc-4.png" class="image-showcase mx-auto" alt="Design at columbia marketing example.">
         </div>
       </div>
 
   </div>
   </div>
+
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
+  </body>
+</html>
