--- a/ui-ux/amot.html
+++ b/ui-ux/amot.html
@@ -19,31 +19,32 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
 
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="../3D/">3D</a>
-				</li>
-				<li>
-					<a href="./">UI/UX</a>
-				</li>
-                <li>
-					<a href="../product/">PRODUCT</a>
-				</li>
-				<li>
-					<a href="../arch/">ARCH</a>
-				</li>
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../3D/">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../arch/">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../product/">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-			</ul>
-
-        </div>
 
   <div id="UI-UX" class = "panel">
     <div class="container">
@@ -54,13 +55,12 @@
       <div class="spacer"></div>
 
             <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <div class="title">Åmot Farm Inc. Website</div>
-                    <h2>Guam, 2017</h2>
 
         </div>
-        <div class="col-6">
-          <div class="spacer"></div>
+        <div class="col-md-6 col-sm-12">
+                    <h4>Guam, 2017</h4>
 
           <p>I was brought on to the project to design the website for a local farm-to-table organization that promotes traditional
             medicines. The project would give the organization an online presence allowing it to be more accessible to
@@ -69,24 +69,24 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
 
             <img src="./media/amot-1.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/amot-2.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
         </div>
 
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
 
             <img src="./media/amot-3.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/amot-4.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
         </div>
 
@@ -101,5 +101,14 @@
 
 
 
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
   </body>
 </html>
