--- a/ui-ux/cvc.html
+++ b/ui-ux/cvc.html
@@ -19,31 +19,31 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
 
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="../3D/">3D</a>
-				</li>
-				<li>
-					<a href="./">UI/UX</a>
-				</li>
-                <li>
-					<a href="../product/">PRODUCT</a>
-				</li>
-				<li>
-					<a href="../arch/">ARCH</a>
-				</li>
-
-			</ul>
-
-        </div>
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../3D/">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../arch/">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../product/">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
   <div id="UI-UX" class = "panel">
     <div class="container">
@@ -55,14 +55,14 @@
       <!-- COLUMBIA VIRTUAL CAMPUS -->
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
 
           <img src="./media/cvc-1.png" class="image-showcase mx-auto" alt="Columbia virtual campus collage">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+        <div class="col-md-12 col-sm-12">
           <div class="title">Columbia Virtual Campus</div>
 
                   <h2>UX Designer</h2>
@@ -77,7 +77,7 @@
 
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           <div>Columbia Virtual Campus was designed to serve the Columbia Community during the COVID-19 pandemic by offering
           virtual events and resources to students who found themselves in no circumstances.</div>
           <div class="spacer"></div>
@@ -90,7 +90,7 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12 pb-3">
           <div class="row standard-margin project-showcase">
             <img src="./media/cvc-3.png" class="image-showcase mx-auto" alt="low fidelity prototype">
           </div>
@@ -100,7 +100,7 @@
           </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <img src="./media/cvc-5.png" class="image-showcase mx-auto" alt="high fidelity prototype">
         </div>
       </div>
@@ -110,7 +110,7 @@
 
       <div class="row standard-margin project-showcase">
 
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           The design team was tasked to conduct user testing comparing the old version of the site with a new version
           containing a visual update.
           The team wanted to obtain both qualitative and quantitative feeback from users we tested to better understand
@@ -119,14 +119,14 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           <img src="./media/cvc-7.png" class="image-showcase mx-auto" alt="Rainbow testing grid">
         </div>
       </div>
 
          <div class="row standard-margin project-showcase">
 
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           This method of user testing allowed us to visually qualify data based on how users interacted with it. It proved to be
           useful in summarizing data and identifying problem areas that most users struggled with. This method was
           effective and gave useful qualitative and quantitative infromation about how our designs were interacted with.
@@ -137,7 +137,7 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
           <img src="./media/cvc-8.png" class="image-showcase mx-auto" alt="Rainbow testing results">
         </div>
       </div>
@@ -148,9 +148,14 @@
 
 
 
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-
-
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
   </body>
 </html>
