--- a/ui-ux/perfect-shot.html
+++ b/ui-ux/perfect-shot.html
@@ -19,31 +19,31 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
 
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-      <a class="home-button" href="../">Noah Sablan</a>
-      <ul>
-				<li>
-					<a href="../3D/">3D</a>
-				</li>
-				<li>
-					<a href="./">UI/UX</a>
-				</li>
-                <li>
-					<a href="../product/">PRODUCT</a>
-				</li>
-				<li>
-					<a href="../arch/">ARCH</a>
-				</li>
-
-			</ul>
-
-        </div>
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../3D/">3D</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./">UI-UX</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../arch/">Architecture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../product/">Product</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
   <div id="UI-UX" class = "panel">
     <div class="container">
@@ -53,13 +53,13 @@
       <div class="spacer"></div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-md-6 col-sm-12">
           <div class="title">Perfect Shot</div>
 
         </div>
-        <div class="col-6">
-           <h2>Professor Lydia Chilton</h2>
-          <h2>March 2020</h2>
+        <div class="col-md-6 col-sm-12">
+           <h4>Professor Lydia Chilton</h4>
+          <h4>March 2020</h4>
           <p>This application was designed as a high fidelity prototype of an application that taught users how to shoot
           manual mode on a camera.</p>
         </div>
@@ -73,18 +73,18 @@
 
       <div class="row standard-margin project-showcase">
 
-        <div class="col-6 justify-content-center">
+        <div class="col-md-6 col-sm-12 pb-3 justify-content-center">
             <img src="./media/ps-1.png" class="image-showcase mx-auto" alt="Perfect Shot iso learning page.">
         </div>
 
-          <div class="col-6 justify-content-center">
+          <div class="col-md-6 col-sm-12 justify-content-center">
             <img src="./media/ps-2.png" class="image-showcase mx-auto" alt="Perfect Shot quiz page.">
           </div>
       </div>
 
 
         <div class="row standard-margin project-showcase">
-            <div class="col-12 justify-content-center">
+            <div class="col-md-12 col-sm-12 justify-content-center">
           <img src="./media/ps-3.png" class="image-showcase mx-auto" alt="Perfect shot shutter speed page.">
             </div>
         </div>
@@ -103,5 +103,14 @@
 
 
 
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
   </body>
 </html>
