re sized gifs vrt therapy page

--- a/3D/vrt-therapy.html
+++ b/3D/vrt-therapy.html
@@ -70,7 +70,7 @@
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-6 col-sm-12 pb-3">
-          <img src="./media/vrt-1.gif" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
+          <img src="./media/vrt-1-ps.gif" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
         </div>
         <div class="col-md-6 col-sm-12">
           This project was created with the goal of successfully implementing key principles of VR application design.
@@ -81,19 +81,19 @@
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-6 col-sm-12 pb-3">
-         <img src="./media/vrt-2.gif" class="image-showcase mx-auto" alt="Travel example.">
+         <img src="./media/vrt-2.gif" class="image-showcase mx-auto size-gif"   alt="Travel example.">
         </div>
         <div class="col-md-6 col-sm-12">
-          <img src="./media/vrt-3.jpg" class="image-showcase mx-auto" alt="Art Therapy Game map.">
+          <img src="./media/vrt-3.jpg" class="image-showcase mx-auto size-gif" alt="Art Therapy Game map.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-6 col-sm-12 pb-3">
-         <img src="./media/vrt-4.gif" class="image-showcase mx-auto" alt="Art Therapy Game environment painting.">
+         <img src="./media/vrt-4-opt.gif" class="image-showcase mx-auto size-gif" alt="Art Therapy Game environment painting.">
         </div>
         <div class="col-md-6 col-sm-12">
-          <img src="./media/vrt-5.gif" class="image-showcase mx-auto" alt="Art Therapy Game environment manipulation.">
+          <img src="./media/vrt-5-opt.gif" class="image-showcase mx-auto size-gif" alt="Art Therapy Game environment manipulation.">
         </div>
       </div>
 
