--- a/3D/vrt-therapy.html
+++ b/3D/vrt-therapy.html
@@ -70,7 +70,7 @@
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-6 col-sm-12 pb-3">
-          <img src="./media/vrt-1-ps.gif" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
+          <img src="./media/vrt-1.gif" class="image-showcase mx-auto size-gif" alt="Art Therapy Game Demo">
         </div>
         <div class="col-md-6 col-sm-12">
           This project was created with the goal of successfully implementing key principles of VR application design.
