Adding title page edits

--- a/index.html
+++ b/index.html
@@ -79,28 +79,28 @@
 
             <div class="row standard-margin project-showcase">
               <div class="col-md-6 col-sm-6">
-                <div class="title">Hi! My name is</div>
-                <div class="name-Noah">Noah Sablan.</div>
-              </div>
-              <div class="col-md-6 col-sm-6">
+                <div class="title">Hi! I'm Noah.</div>
 
+                <!-- <div class="name-Noah">Noah Sablan.</div> -->
               </div>
+
+
             </div>
 
             <div class="row standard-margin project-showcase">
-              <div class="col-md-12 col-sm-12 title">
-                <div>I'm a designer from Guam,
+              <div class="col-md-6 col-sm-6">
+                <div class="title">I'm a artist and designer from Guam,
                 working in NYC.</div>
+              </div>
               </div>
 
             </div>
 
             <div class="row standard-margin project-showcase pt-4">
               <div class="col-md-8 col-sm-8">
-                  <h4>You can reach me at</h4>
-                  <h4>noah.a.sablan@gmail.com</h4>
-
+                  <div class="title">You can reach me at noah.a.sablan@gmail.com</div>
               </div>
+
               <div class="col-md-2 col-sm-2">
               </div>
                 <div class = "col-md-2 col-sm-2 pt-4">
@@ -111,7 +111,7 @@
             <div class="row standard-margin project-showcase pt-4">
               <div class="col-md-8 col-sm-8">
                    <a href="./3D/">
-              <div class="title">see projects</div>
+              <div class="title">continue to projects</div>
                         </a>
               </div>
               <div class="col-md-2 col-sm-2">
