Began adding NN and Dia projects.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div class="row standard-margin project-showcase">
               <div class="col-md-6 col-sm-6">
-                <div class="title">I'm a artist and designer from Guam,
+                <div class="title">I'm an artist and designer from Guam,
                 working in NYC.</div>
               </div>
               </div>
