--- a/3D/index.html
+++ b/3D/index.html
@@ -47,61 +47,77 @@
 
   <div id="3D" class = "panel">
 
-    <div class="container">
+      <div class="container">
 
-      <!-- TITLE -->
-<!--     <div class="row standard-margin project-showcase">
-        <div class="col-md-6 col-sm-6 name-section">
-         PROJECTS
-        </div>
-        <div class="col-md-6 col-sm-6">
-        </div>
-      </div> -->
+          <!-- TITLE -->
+          <!--     <div class="row standard-margin project-showcase">
+            <div class="col-md-6 col-sm-6 name-section">
+             PROJECTS
+            </div>
+            <div class="col-md-6 col-sm-6">
+            </div>
+          </div> -->
 
-      <div class="row standard-margin project-row">
-        <div class="col-md-6 col-sm-12 pb-3">
-            <a href="./vrt-therapy.html">
-                <div class="g-r-1"></div>
-            </a>
-        </div>
-        <div class="col-md-6 col-sm-12">
-            <a href="./dml-ide.html">
-                <div class="g-r-2"></div>
-            </a>
-        </div>
+          <div class="row standard-margin project-row">
+              <div class="col-md-6 col-sm-12">
+                  <a href="./NN.html">
+                      <div class="u-r-3"></div>
+                  </a>
+              </div>
+              <div class="col-md-6 col-sm-12">
+                  <a href="./quilt.html">
+                      <div class="u-r-4"></div>
+                  </a>
+              </div>
+          </div>
+
+          <div class="row standard-margin project-row">
+              <div class="col-md-6 col-sm-12 pb-3">
+                  <a href="./vrt-therapy.html">
+                      <div class="g-r-1"></div>
+                  </a>
+              </div>
+              <div class="col-md-6 col-sm-12">
+                  <a href="./dml-ide.html">
+                      <div class="g-r-2"></div>
+                  </a>
+              </div>
+          </div>
+
+          <div class="row standard-margin project-row">
+              <div class="col-md-6 col-sm-12 pb-3">
+                  <a href="../arch/floodplain.html">
+                      <div class="a-r-2"></div>
+                  </a>
+              </div>
+              <div class="col-md-6 col-sm-12">
+                  <a href="../arch/nfl.html">
+                      <div class="a-r-1"></div>
+                  </a>
+              </div>
+          </div>
+
+          <!--
+
+          <div class="row standard-margin project-row">
+              <div class="col-md-6 col-sm-12 pb-3">
+                  <a href="./cg.html">
+                      <div class="g-r-3"></div>
+                  </a>
+              </div>
+              <div class="col-md-6 col-sm-12">
+                  <a href="./solAR.html">
+                      <div class="g-r-4"></div>
+                  </a>
+              </div>
+          </div>
+          -->
+
+
+
+
+
       </div>
-
-      <div class="row standard-margin project-row">
-        <div class="col-md-6 col-sm-12 pb-3">
-            <a href="../arch/floodplain.html">
-                <div class="a-r-2"></div>
-            </a>
-        </div>
-        <div class="col-md-6 col-sm-12">
-            <a href="../arch/nfl.html">
-                <div class="a-r-1"></div>
-            </a>
-        </div>
-      </div>
-
-    <div class="row standard-margin project-row">
-        <div class="col-md-6 col-sm-12 pb-3">
-            <a href="./cg.html">
-                <div class="g-r-3"></div>
-            </a>
-        </div>
-        <div class="col-md-6 col-sm-12">
-            <a href="./solAR.html">
-                <div class="g-r-4"></div>
-            </a>
-        </div>
-      </div>
-
-
-
-
-
-  </div>
   </div>
 
 
