--- a/arch/floodplain.html
+++ b/arch/floodplain.html
@@ -22,7 +22,7 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
+    <a class="navbar-brand" href="../3D/index.html">Noah Sablan</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
         <span class="navbar-toggler-icon"></span>
     </button>
