changing title names

--- a/arch/floodplain.html
+++ b/arch/floodplain.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <title>Noah.S</title>
+    <title>Floodplain | Noah Sablan</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
