--- a/3D/NN.html
+++ b/3D/NN.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <title>Noah.S</title>
+    <title>Nirvana Noir | Noah Sablan</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
