--- a/arch/nfl.html
+++ b/arch/nfl.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <title>Noah.S</title>
+    <title>Newburgh Oral Histories | Noah Sablan</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
