--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <title>Noah Sablan - Designer</title>
+    <title>Noah Sablan | Designer</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
