--- a/index.html
+++ b/index.html
@@ -79,42 +79,36 @@
 
             <div class="row standard-margin project-showcase">
               <div class="col-md-6 col-sm-6">
-                <div class="title">Hi! I'm Noah.</div>
-
-                <!-- <div class="name-Noah">Noah Sablan.</div> -->
+                <div class="title"> </div>
               </div>
 
 
             </div>
 
             <div class="row standard-margin project-showcase">
-              <div class="col-md-6 col-sm-6">
-                <div class="title">I'm an artist and designer from Guam,
-                working in NYC.</div>
-              </div>
+              <div class="col-md-6 col-sm-12">
+                Noah Sablan is an indigenous CHamoru designer from Guam. Currently he is a Technical Designer at Feral Cat Den working on the upcoming title called Nirvana Noir. His design work involves exploring his own identity through observation. He is constantly trying to reconcile two worlds that exist, one that is factual, described coldly by empirical evidence and another that is intuitive, natural and mythological.</div>
+           
               </div>
 
             </div>
 
             <div class="row standard-margin project-showcase pt-4">
-              <div class="col-md-8 col-sm-8">
-                  <div class="title">You can reach me at noah.a.sablan@gmail.com</div>
+              <div class="col-md-6 col-sm-12">
+                  You can reach me at noah.a.sablan@gmail.com
               </div>
 
-              <div class="col-md-2 col-sm-2">
-              </div>
-                <div class = "col-md-2 col-sm-2 pt-4">
-
+              <div class="col-md-6 col-sm-12">
               </div>
             </div>
 
             <div class="row standard-margin project-showcase pt-4">
-              <div class="col-md-8 col-sm-8">
+              <div class="col-md-6 col-sm-12">
                    <a href="./3D/">
-              <div class="title">continue to projects</div>
+              continue to projects
                         </a>
               </div>
-              <div class="col-md-2 col-sm-2">
+              <div class="col-md-6 col-sm-12">
               </div>
 
             </div>
