fixing spacing between NN and quilt on sm devices

--- a/3D/index.html
+++ b/3D/index.html
@@ -59,7 +59,7 @@
           </div> -->
 
           <div class="row standard-margin project-row">
-              <div class="col-md-6 col-sm-12">
+              <div class="col-md-6 col-sm-12 pb-3">
                   <a href="./NN.html">
                       <div class="u-r-3"></div>
                   </a>
