Homepage work for new gallery implementation

--- a/3D/index.html
+++ b/3D/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<doctype html>
 <html lang="en">
   <head>
 
@@ -31,99 +31,57 @@
             <li class="nav-item">
                 <a class="nav-link" href="#3D">Projects</a>
             </li>
-<!--             <li class="nav-item">
-                <a class="nav-link" href="../ui-ux/">UI-UX</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../arch/">Architecture</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../product/">Product</a>
-            </li> -->
+
         </ul>
     </div>
 </nav>
 
-
-  <div id="3D" class = "panel">
-
-      <div class="container">
-
-          <!-- TITLE -->
-          <!--     <div class="row standard-margin project-showcase">
-            <div class="col-md-6 col-sm-6 name-section">
-             PROJECTS
+    <main>
+        <div class="gallery">
+            <!-- Project 1 -->
+            <a href="./NN.html">
+            <div class="gallery-item" sa href="./NN.html" style="background-image: url('../3D/media/NN-1.jpg');">
+                <div class="info">Nirvana Noir</div>
             </div>
-            <div class="col-md-6 col-sm-6">
+</a>
+
+		<a href="./quilt.html">
+            <!-- Project 2 -->
+            <div class="gallery-item" style="background-image: url('../3D/media/quilt-2.jpg');">
+                <div class="info">Textile Documentation</div>
             </div>
-          </div> -->
+		</a>
 
-          <div class="row standard-margin project-row">
-              <div class="col-md-6 col-sm-12 pb-3">
-                  <a href="./NN.html">
-                      <div class="u-r-3"></div>
-                  </a>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                  <a href="./quilt.html">
-                      <div class="u-r-4"></div>
-                  </a>
-              </div>
-          </div>
+            <!-- Project 3 -->
+        <a href="./vrt-therapy.html">    
+	<div class="gallery-item" style="background-image: url('../3D/media/vrt-showcase.png');">
+                <div class="info">VRT Therapy</div>
+            </div>
+		</a>
 
-          <div class="row standard-margin project-row">
-              <div class="col-md-6 col-sm-12 pb-3">
-                  <a href="./vrt-therapy.html">
-                      <div class="g-r-1"></div>
-                  </a>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                  <a href="./dml-ide.html">
-                      <div class="g-r-2"></div>
-                  </a>
-              </div>
-          </div>
+            <!-- Project 4 -->
+		<a href="./dml-ide.html">
+            <div class="gallery-item" style="background-image: url('../3D/media/dml-2.gif');">
+                <div class="info">DML-IDE</div>
+            </div>
+		</a>
 
-          <div class="row standard-margin project-row">
-              <div class="col-md-6 col-sm-12 pb-3">
-                  <a href="../arch/floodplain.html">
-                      <div class="a-r-2"></div>
-                  </a>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                  <a href="../arch/nfl.html">
-                      <div class="a-r-1"></div>
-                  </a>
-              </div>
-          </div>
+            <!-- Project 5 -->
+		<a href="../arch/floodplain.html">
+            <div class="gallery-item" style="background-image: url('../arch/media/flood-1.JPG');">
+                <div class="info">Floodplain</div>
+            </div>
+		</a>
 
-          <!--
+            <!-- Project 6 -->
+                <a href="../arch/nfl.html">
+            <div class="gallery-item" style="background-image: url('../arch/media/newburgh-2.JPG');">
+                <div class="info">Oral History Auditorium</div>
+            </div>
+		</a>
 
-          <div class="row standard-margin project-row">
-              <div class="col-md-6 col-sm-12 pb-3">
-                  <a href="./cg.html">
-                      <div class="g-r-3"></div>
-                  </a>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                  <a href="./solAR.html">
-                      <div class="g-r-4"></div>
-                  </a>
-              </div>
-          </div>
-          -->
-
-
-
-
-
-      </div>
-  </div>
-
-
-
-
-
+        </div>
+    </main>
 
 <!-- JQUERY AND POPPER before bootstrap.js -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
