spelling error for vrt-showcase.png on homepage

--- a/3D/index.html
+++ b/3D/index.html
@@ -54,7 +54,7 @@
 
             <!-- Project 3 -->
         <a href="./vrt-therapy.html">    
-	<div class="gallery-item" style="background-image: url('../3D/media/vrt-showcase.png');">
+	<div class="gallery-item" style="background-image: url('../3D/media/VRT-showcase.png');">
                 <div class="info">VRT Therapy</div>
             </div>
 		</a>
