Adding favicon link to all pages

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
+	<!-- FAVICON -->
+<link rel="icon" href="./favicon.ico" sizes="32x32">
 
 
     <!-- Bootstrap CSS -->
