Contact page, dynamic nav bar, snapping on home pa ge, and some css cleanup, uniorm images on pages.

--- a/3D/index.html
+++ b/3D/index.html
@@ -24,63 +24,50 @@
 
   </head>
   <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#3D">Projects</a>
-            </li>
 
-        </ul>
-    </div>
-</nav>
 
     <main>
-        <div class="gallery">
+        <div class="gallery home-parent">
             <!-- Project 1 -->
             <a href="./NN.html">
-            <div class="gallery-item" sa href="./NN.html" style="background-image: url('../3D/media/NN-1.jpg');">
+            <section class="gallery-item" sa href="./NN.html" style="background-image: url('../3D/media/NN-1.jpg');">
                 <div class="info">Nirvana Noir</div>
-            </div>
+            </section>
 </a>
 
 		<a href="./quilt.html">
             <!-- Project 2 -->
-            <div class="gallery-item" style="background-image: url('../3D/media/quilt-2.jpg');">
+            <section class="gallery-item" style="background-image: url('../3D/media/quilt-2.jpg');">
                 <div class="info">Textile Documentation</div>
-            </div>
+            </section>
 		</a>
 
             <!-- Project 3 -->
         <a href="./vrt-therapy.html">    
-	<div class="gallery-item" style="background-image: url('../3D/media/VRT-showcase.png');">
+	<section class="gallery-item" style="background-image: url('../3D/media/VRT-showcase.png');">
                 <div class="info">VRT Therapy</div>
-            </div>
+    </section>
 		</a>
 
             <!-- Project 4 -->
 		<a href="./dml-ide.html">
-            <div class="gallery-item" style="background-image: url('../3D/media/dml-2.gif');">
+            <section class="gallery-item" style="background-image: url('../3D/media/dml-2.gif');">
                 <div class="info">DML-IDE</div>
-            </div>
+            </section>
 		</a>
 
             <!-- Project 5 -->
 		<a href="../arch/floodplain.html">
-            <div class="gallery-item" style="background-image: url('../arch/media/flood-1.JPG');">
+            <section class="gallery-item section" style="background-image: url('../arch/media/flood-1.JPG');">
                 <div class="info">Floodplain</div>
-            </div>
+            </section>
 		</a>
 
             <!-- Project 6 -->
                 <a href="../arch/nfl.html">
-            <div class="gallery-item" style="background-image: url('../arch/media/newburgh-2.JPG');">
+            <section class="gallery-item section" style="background-image: url('../arch/media/newburgh-2.JPG');">
                 <div class="info">Oral History Auditorium</div>
-            </div>
+            </section>
 		</a>
 
         </div>
@@ -95,6 +82,7 @@
 
 <!-- Custom JS -->
     <script src="../static/home.js"></script>
+    <script src="../static/navbar.js"></script>
 
   </body>
 </html>
