--- a/arch/floodplain.html
+++ b/arch/floodplain.html
@@ -22,28 +22,6 @@
 <link rel="icon" href="../favicon.ico" sizes="32x32">
   </head>
   <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="../3D/index.html">Noah Sablan</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="../3D/">Projects</a>
-            </li>
-<!--             <li class="nav-item">
-                <a class="nav-link" href="../ui-ux/">UI-UX</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./">Architecture</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../product/">Product</a>
-            </li> -->
-        </ul>
-    </div>
-</nav>
 
 
     <div id="ARCH" class = "panel">
@@ -53,7 +31,7 @@
       <!-- TITLE -->
       <div class="spacer"></div>
       <div class="row standard-margin project-showcase">
-        <div class="col-md-6 col-sm-12 pb-3">
+        <div class="col-md-6 col-sm-12">
           <div class="title">
           Floodplain
           </div>
@@ -65,16 +43,16 @@
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
-          <img src="./media/flood-1.JPG" class="image-showcase mx-auto" alt="Flood plain from NYC hazard mapper.">
+          <img src="./media/flood-1.JPG" class="image-showcase" alt="Flood plain from NYC hazard mapper.">
       </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-md-6 col-sm-12 pb-3">
-          <img src="./media/flood-3.JPG" class="image-showcase mx-auto" alt="Floodplain flow exploration 1.">
+        <div class="col-md-6 col-sm-12">
+          <img src="./media/flood-3.JPG" class="image-showcase" alt="Floodplain flow exploration 1.">
         </div>
         <div class="col-md-6 col-sm-12">
-          <img src="./media/flood-5.JPG" class="image-showcase mx-auto" alt="Floodplain flow exploration 2.">
+          <img src="./media/flood-5.JPG" class="image-showcase" alt="Floodplain flow exploration 2.">
         </div>
       </div>
 
@@ -87,13 +65,13 @@
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-12 col-sm-12">
-          <img src="./media/flood-2.png" class="image-showcase mx-auto" alt="Floodplain final model exploration.">
+          <img src="./media/flood-2.png" class="image-showcase" alt="Floodplain final model exploration.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-12 col-sm-12">
-          <img src="./media/flood-4.png" class="image-showcase mx-auto" alt="Floodplain final model exploration.">
+          <img src="./media/flood-4.png" class="image-showcase" alt="Floodplain final model exploration.">
         </div>
       </div>
 
