--- a/3D/NN.html
+++ b/3D/NN.html
@@ -23,28 +23,7 @@
 
   </head>
   <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="./index.html">Noah Sablan</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="./">Projects</a>
-            </li>
-<!--             <li class="nav-item">
-                <a class="nav-link" href="../ui-ux/">UI-UX</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../arch/">Architecture</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../product/">Product</a>
-            </li> -->
-        </ul>
-    </div>
-</nav>
+
 
 
   <div id="3D" class = "panel">
@@ -97,5 +76,6 @@
 
 <!-- Custom JS -->
     <script src="../static/home.js"></script>
+    <script src="../static/navbar.js"></script>
   </body>
 </html>
