--- a/3D/cg.html
+++ b/3D/cg.html
@@ -29,7 +29,7 @@
     <div class="navbar-collapse collapse" id="collapsingNavbarXs">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="./">Projects</a>
+                <a class="nav-link" href="./index.html">Projects</a>
             </li>
 <!--             <li class="nav-item">
                 <a class="nav-link" href="../ui-ux/">UI-UX</a>
