--- a/3D/dml-ide.html
+++ b/3D/dml-ide.html
@@ -23,28 +23,6 @@
 
   </head>
   <body>
- <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="./index.html">Noah Sablan</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="./">Projects</a>
-            </li>
-<!--             <li class="nav-item">
-                <a class="nav-link" href="../ui-ux/">UI-UX</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../arch/">Architecture</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../product/">Product</a>
-            </li> -->
-        </ul>
-    </div>
-</nav>
 
 
   <div id="3D" class = "panel">
@@ -137,10 +115,10 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-md-6 col-sm-12 pb-3">
+        <div class="col-md-6">
          <img src="./media/dml-6.png" class="image-showcase mx-auto" alt="Bracket before optimization.">
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6">
          <img src="./media/dml-5.gif" class="image-showcase mx-auto" alt="Bracket after optimization.">
         </div>
       </div>
@@ -169,5 +147,6 @@
 
 <!-- Custom JS -->
     <script src="../static/home.js"></script>
+    <script src="../static/navbar.js"></script>
   </body>
 </html>
