--- a/3D/vrt-therapy.html
+++ b/3D/vrt-therapy.html
@@ -23,28 +23,6 @@
 
   </head>
   <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="./index.html">Noah Sablan</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="./">Projects</a>
-            </li>
-<!--             <li class="nav-item">
-                <a class="nav-link" href="../ui-ux/">UI-UX</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../arch/">Architecture</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../product/">Product</a>
-            </li> -->
-        </ul>
-    </div>
-</nav>
 
 
   <div id="3D" class = "panel">
@@ -70,8 +48,8 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-md-6 col-sm-12 pb-3">
-          <img src="./media/vrt-1.gif" class="image-showcase mx-auto size-gif" alt="Art Therapy Game Demo">
+        <div class="col-md-6 col-sm-12">
+          <img src="./media/vrt-1.gif" class="image-showcase" alt="Art Therapy Game Demo">
         </div>
         <div class="col-md-6 col-sm-12">
           This project was created with the goal of successfully implementing key principles of VR application design.
@@ -81,20 +59,20 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-md-6 col-sm-12 pb-3">
-         <img src="./media/vrt-2.gif" class="image-showcase mx-auto size-gif"   alt="Travel example.">
+        <div class="col-md-6 col-sm-12">
+         <img src="./media/vrt-2.gif" class="image-showcase"   alt="Travel example.">
         </div>
         <div class="col-md-6 col-sm-12">
-          <img src="./media/vrt-3.jpg" class="image-showcase mx-auto size-gif" alt="Art Therapy Game map.">
+          <img src="./media/vrt-3.jpg" class="image-showcase" alt="Art Therapy Game map.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-md-6 col-sm-12 pb-3">
-         <img src="./media/vrt-4-opt.gif" class="image-showcase mx-auto size-gif" alt="Art Therapy Game environment painting.">
+        <div class="col-md-6 col-sm-12">
+         <img src="./media/vrt-4-opt.gif" class="image-showcase" alt="Art Therapy Game environment painting.">
         </div>
         <div class="col-md-6 col-sm-12">
-          <img src="./media/vrt-5-opt.gif" class="image-showcase mx-auto size-gif" alt="Art Therapy Game environment manipulation.">
+          <img src="./media/vrt-5-opt.gif" class="image-showcase" alt="Art Therapy Game environment manipulation.">
         </div>
       </div>
 
@@ -117,5 +95,6 @@
 
 <!-- Custom JS -->
     <script src="../static/home.js"></script>
+    <script src="../static/navbar.js"></script>
   </body>
 </html>
