--- a/arch/nfl.html
+++ b/arch/nfl.html
@@ -23,28 +23,6 @@
 
   </head>
   <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="../3D/index.html">Noah Sablan</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="../3D/">Projects</a>
-            </li>
-<!--             <li class="nav-item">
-                <a class="nav-link" href="../ui-ux/">UI-UX</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./">Architecture</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../product/">Product</a>
-            </li> -->
-        </ul>
-    </div>
-</nav>
 
     <div id="ARCH" class = "panel">
     <div class="container">
@@ -93,37 +71,37 @@
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-12 col-sm-12">
-          <img src="./media/newburgh-9.JPG" class="image-showcase mx-auto" alt="Paper model configuration 1.">
+          <img src="./media/newburgh-9.JPG" class="image-showcase" alt="Paper model configuration 1.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-6 col-sm-12pb-3">
-         <img src="./media/newburgh-3.jpg" class="image-showcase mx-auto" alt="Paper model configuration 2.">
+         <img src="./media/newburgh-3.jpg" class="image-showcase" alt="Paper model configuration 2.">
         </div>
         <div class="col-md-6 col-sm-12">
-          <img src="./media/newburgh-4.jpg" class="image-showcase mx-auto" alt="Paper model configuration 3.">
+          <img src="./media/newburgh-4.jpg" class="image-showcase" alt="Paper model configuration 3.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-6 col-sm-12 pb-3">
-         <img src="./media/newburgh-5.png" class="image-showcase mx-auto" alt="Google maps view with cone 1.">
+         <img src="./media/newburgh-5.png" class="image-showcase" alt="Google maps view with cone 1.">
         </div>
         <div class="col-md-6 col-sm-12">
-          <img src="./media/newburgh-6.png" class="image-showcase mx-auto" alt="Google maps view with cone 2.">
+          <img src="./media/newburgh-6.png" class="image-showcase" alt="Google maps view with cone 2.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-12 col-sm-12 pb-3">
-          <img src="./media/newburgh-7.png" class="image-showcase mx-auto" alt="Rhino rendering of cone.">
+          <img src="./media/newburgh-7.png" class="image-showcase" alt="Rhino rendering of cone.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col-md-12 col-sm-12">
-          <img src="./media/newburgh-8.jpg" class="image-showcase mx-auto" alt="Final cone design.">
+          <img src="./media/newburgh-8.jpg" class="image-showcase" alt="Final cone design.">
         </div>
       </div>
 
@@ -146,5 +124,6 @@
 
 <!-- Custom JS -->
     <script src="../static/home.js"></script>
+    <script src="../static/navbar.js"></script>
   </body>
 </html>
