--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <div class = "container" >
-        <div id="home" class = "home-panel">
+        <div id="home">
 
             <div class="row standard-margin project-showcase">
               <div class="col-md-6 col-sm-6">
