Changes to home page subtext and navbar absolute path

--- a/3D/index.html
+++ b/3D/index.html
@@ -32,13 +32,15 @@
             <a href="./NN.html">
             <section class="gallery-item" sa href="./NN.html" style="background-image: url('../3D/media/NN-1.jpg');">
                 <div class="info">Nirvana Noir</div>
+                <div class="info-sub">A Psychedelic Neo-Noir game in production in Unreal Engine 5.</div>
             </section>
 </a>
 
 		<a href="./quilt.html">
             <!-- Project 2 -->
             <section class="gallery-item" style="background-image: url('../3D/media/quilt-2.jpg');">
-                <div class="info">Textile Documentation</div>
+                <div class="info">Quilting The Lightning Field</div>
+                <div class="info-sub">Creating documentation from intuition.</div>
             </section>
 		</a>
 
@@ -46,6 +48,7 @@
         <a href="./vrt-therapy.html">    
 	<section class="gallery-item" style="background-image: url('../3D/media/VRT-showcase.png');">
                 <div class="info">VRT Therapy</div>
+                <div class="info-sub">Leveraging the restorative properties of art in VR.</div>
     </section>
 		</a>
 
@@ -53,6 +56,7 @@
 		<a href="./dml-ide.html">
             <section class="gallery-item" style="background-image: url('../3D/media/dml-2.gif');">
                 <div class="info">DML-IDE</div>
+                <div class="info-sub">Testing the limits of simulation with NVIDIA.</div>
             </section>
 		</a>
 
@@ -60,13 +64,15 @@
 		<a href="../arch/floodplain.html">
             <section class="gallery-item section" style="background-image: url('../arch/media/flood-1.JPG');">
                 <div class="info">Floodplain</div>
+                <div class="info-sub">Researching the fabric of East Harlem life through a floodplain.</div>
             </section>
 		</a>
 
             <!-- Project 6 -->
                 <a href="../arch/nfl.html">
             <section class="gallery-item section" style="background-image: url('../arch/media/newburgh-2.JPG');">
-                <div class="info">Oral History Auditorium</div>
+                <div class="info">Extruding the Library</div>
+                <div class="info-sub">A proposed oral history center for the Newburgh Free Library.</div>
             </section>
 		</a>
 
