--- a/ui-ux/ambient.html
+++ b/ui-ux/ambient.html
@@ -25,28 +25,6 @@
 
   </head>
   <body>
-<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="../index.html">Noah Sablan</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarXs">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="collapsingNavbarXs">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="../3D/">3D</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./">UI-UX</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../arch/">Architecture</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../product/">Product</a>
-            </li>
-        </ul>
-    </div>
-</nav>
 
   <div id="UI-UX" class = "panel">
     <div class="container">
@@ -148,5 +126,6 @@
 
 <!-- Custom JS -->
     <script src="../static/home.js"></script>
+    <script src="../static/navbar.js"></script>
   </body>
 </html>
