Updating projects to include ambient, reordering, including homepage in nav bar and adding link to contact.

--- a/3D/index.html
+++ b/3D/index.html
@@ -28,35 +28,38 @@
 
     <main>
         <div class="gallery home-parent">
-            <!-- Project 1 -->
-            <a href="./NN.html">
-            <section class="gallery-item" sa href="./NN.html" style="background-image: url('../3D/media/NN-1.jpg');">
-                <div class="info">Nirvana Noir</div>
-                <div class="info-sub">A Psychedelic Neo-Noir game in production in Unreal Engine 5.</div>
-            </section>
-</a>
+
 
 		<a href="./quilt.html">
             <!-- Project 2 -->
             <section class="gallery-item" style="background-image: url('../3D/media/quilt-2.jpg');">
                 <div class="info">Quilting The Lightning Field</div>
+                <div></div>
                 <div class="info-sub">Creating documentation from intuition.</div>
             </section>
 		</a>
+        
+            <!-- Project 1 -->
+            <a href="./NN.html">
+                <section class="gallery-item" sa href="./NN.html" style="background-image: url('../3D/media/NN-1.jpg');">
+                    <div class="info">Nirvana Noir</div>
+                    <div class="info-sub">A Psychedelic Neo-Noir game in production in Unreal Engine 5.</div>
+                </section>
+            </a>        
+
+            <!-- Project 7 -->
+            <a href="../arch/nfl.html">
+                <section class="gallery-item section" style="background-image: url('../arch/media/newburgh-2.JPG');">
+                    <div class="info">Extruding the Library</div>
+                    <div class="info-sub">A proposed oral history center for the Newburgh Free Library.</div>
+                </section>
+            </a>
 
             <!-- Project 3 -->
         <a href="./vrt-therapy.html">    
-	<section class="gallery-item" style="background-image: url('../3D/media/VRT-showcase.png');">
+	        <section class="gallery-item" style="background-image: url('../3D/media/VRT-showcase.png');">
                 <div class="info">VRT Therapy</div>
                 <div class="info-sub">Leveraging the restorative properties of art in VR.</div>
-    </section>
-		</a>
-
-            <!-- Project 4 -->
-		<a href="./dml-ide.html">
-            <section class="gallery-item" style="background-image: url('../3D/media/dml-2.gif');">
-                <div class="info">DML-IDE</div>
-                <div class="info-sub">Testing the limits of simulation with NVIDIA.</div>
             </section>
 		</a>
 
@@ -68,13 +71,21 @@
             </section>
 		</a>
 
+        <a href="../ui-ux/ambient.html">
             <!-- Project 6 -->
-                <a href="../arch/nfl.html">
-            <section class="gallery-item section" style="background-image: url('../arch/media/newburgh-2.JPG');">
-                <div class="info">Extruding the Library</div>
-                <div class="info-sub">A proposed oral history center for the Newburgh Free Library.</div>
+            <section class="gallery-item" style="background-image: url('../ui-ux/media/ambient-4.png');">
+                <div class="info">ambient u</div>
+                <div class="info-sub">Regaining focus through audio in the midst of COVID.</div>
             </section>
 		</a>
+
+            <!-- Project 4 -->
+            <a href="./dml-ide.html">
+                <section class="gallery-item" style="background-image: url('../3D/media/dml-2.gif');">
+                    <div class="info">DML-IDE</div>
+                    <div class="info-sub">Testing the limits of simulation with NVIDIA.</div>
+                </section>
+            </a>
 
         </div>
     </main>
