--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
 
             <div class="row standard-margin project-showcase">
               <div class="col-md-6 col-sm-12">
-                Noah Sablan is an indigenous CHamoru designer from Guam. Currently he is a Technical Designer at Feral Cat Den working on the upcoming title called Nirvana Noir. His design work involves exploring his own identity through observation. He is constantly trying to reconcile two worlds that exist, one that is factual, described coldly by empirical evidence and another that is intuitive, natural and mythological.</div>
+                <div style="font-size: 56px !important; font-weight: bolder !important;">Noah Sablan</div>
+                 is an indigenous CHamoru designer from Guam. 
+                 Currently he is a 
+                 Technical Designer
+                  at Feral Cat Den working on the upcoming title called Nirvana Noir. 
+                  He is constantly trying to reconcile two worlds that exist, one that is factual, described coldly by empirical evidence and another that is intuitive, natural and mythological.</div>
            
               </div>
 
@@ -74,23 +79,20 @@
 
             <div class="row standard-margin project-showcase pt-4">
               <div class="col-md-6 col-sm-12">
-                  You can reach me at noah.a.sablan@gmail.com
+                  <a href="./3D/contact-me.html">
+                    reach out
+                    </a>
+                    or
+                    <a href="./3D/">
+                      continue to projects
+                                </a>
+                      </div>
               </div>
 
               <div class="col-md-6 col-sm-12">
               </div>
             </div>
 
-            <div class="row standard-margin project-showcase pt-4">
-              <div class="col-md-6 col-sm-12">
-                   <a href="./3D/">
-              continue to projects
-                        </a>
-              </div>
-              <div class="col-md-6 col-sm-12">
-              </div>
-
-            </div>
 
 
 
